Style improvements to Clippings Manager (part of issue #265)

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -2,6 +2,7 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
+@import url("../style/laf.css");
 @import url("../style/clippingLabelPicker.css");
 
 
@@ -702,6 +703,10 @@ ul.fancytree-container {
 /*
  * Dialog boxes
  */
+
+.lightbox {
+    border-radius: 2px;
+}
 
 .lightbox .msgbox-icon {
     float: left;
