--- a/wx-src/style/lightbox.css
+++ b/wx-src/style/lightbox.css
@@ -12,7 +12,7 @@
     --color-ovl-bkgd: black;
     --opacity-ovl-bkgd: 0.5;
     --color-lb-border: #484848;
-    --color-lb-bkgd: white;
+    --color-lb-bkgd: #fefefe;
     --color-lb-shadow: #303030cc;
 }
 
